[package]
name = "goldfix"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.114"
toml = { version = "0.8.19", features = ["parse"] }
chrono = "0.4.39"
regex = "1.10.3"
once_cell = "1.20.2"

[dev-dependencies]
tempfile = "3.10.0"
