[package]
name = "goldfix"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.114"
toml = { version = "0.8.19", features = ["parse"] }
chrono = "0.4.39"
regex = "1.10.3"
once_cell = "1.20.2"
rustls = "0.22.1"
rustls-pemfile = "2.1.0"
tokio-rustls = "0.25.0"
webpki-roots = "0.26.0"
x509-parser = "0.15.1"

[dev-dependencies]
tempfile = "3.10.0"